# kronos-compute

./: .gitignore  CHANGELOG.md  Cargo.toml  EPIC.md  ISSUES_TRACKING.md  LICENSE-MIT  OPTIMIZATION_SUMMARY.md  README.md  RELEASE.md  RELEASE_NOTES_v0.2.0-rc2.md  SAFE_API_CHANGE_REQUEST.md  SAFE_API_DEBUG_NOTES.md  SPORKLE_CLAUDE_GUIDE.md  TEST_REPORT.md  TODO.md  VERSION_UPDATE_SUMMARY.md  build.rs  cbindgen.toml  kronos.h  kronos.pc  kronos_standalone.rs
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  windows.yml
benches/: api_overhead.rs  compute_workloads.rs  dispatch_throughput.rs  initialization.rs  memory_operations.rs  optimization_test.rs
docs/: COMPATIBILITY.md  DEVELOPMENT_SETUP.md  EPIC.md  EPIC2.md  EPIC_MULTI_ICD.md  KNOWN_ISSUES.md  PEER_REVIEW_2025-08-25.md  PEER_REVIEW_SESSION_2.md  SAFETY_DOCUMENTATION_REPORT.md  TODO.md  TROUBLESHOOTING.md  UNIFIED_API.md
docs/architecture/: ICD_SUCCESS.md  OPTIMIZATION_SUMMARY.md  VULKAN_COMPARISON.md
docs/benchmarks/: BENCHMARK_RESULTS.md
docs/qa/: MINI_REVIEW.md  QA_PLAN_MULTI_ICD.md  QA_REPORT.md  QA_REPORT_2025-08-25.md  TEST_RESULTS.md
examples/: amd_perf.rs  benchmark_comparison.rs  benchmark_fair_comparison.rs  benchmark_quick.rs  compute_optimized.rs  compute_simple.rs  compute_test.rs  descriptor_test.rs  icd_info.rs  icd_preference_demo.rs  icd_select.rs  rust_implementation_test.rs  simple_test.rs  sync_test.rs  test_amd_directly.rs  test_amd_path.rs  test_forwarding.rs  test_icd.rs  test_icd_loading.rs  test_preference_before_init.rs  test_queue_families.rs  test_safe_amd_index.rs  test_safe_api_amd.rs  test_safe_api_crash.rs  test_safe_api_pipeline.rs  test_safe_api_pipeline_amd.rs  test_safe_api_simple.rs  test_thread_safety.rs  unified_api_simple.rs
pkg-config/: kronos-compute.pc.in
scripts/: amd_bench.sh  build_and_test.sh  build_shaders.sh  prepare_release.sh  validate_bench.sh
shaders/: saxpy.comp  saxpy.spv  shader.spv  vector_add.comp
src/: lib.rs
src/api/: buffer.rs  command.rs  context.rs  mod.rs  pipeline.rs  sync.rs  tests.rs
src/core/: compute.rs  enums.rs  flags.rs  mod.rs  structs.rs  thread_safety.rs  timeline.rs
src/ffi/: mod.rs
src/implementation/: barrier_policy.rs  buffer.rs  compute.rs  descriptor.rs  device.rs  error.rs  forward.rs  icd_loader.rs  instance.rs  memory.rs  mod.rs  persistent_descriptors.rs  pipeline.rs  pool_allocator.rs  sync.rs  tests.rs  timeline_batching.rs
src/sys/: mod.rs
tests/: aggregated_mode_test.rs  amd_validation.rs  ffi_safety.rs  flags_tests.rs  icd_aggregate_e2e.rs  icd_aggregate_stress.rs  icd_dispatch.rs  icd_forwarding.rs  icd_selection.rs  integration_tests.rs  perf_counters.rs  safe_api_icd_select.rs  structure_sizes.rs  sys_tests.rs  thread_safety_test.rs  unified_api_test.rs
