[package]
name = "kronos"
version = "0.1.0"
edition = "2021"
authors = ["Kronos Contributors"]
description = "A compute-only Vulkan implementation in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/kronos"
keywords = ["vulkan", "compute", "gpu", "graphics"]
categories = ["graphics", "api-bindings"]

[dependencies]
# Core dependencies
libc = "0.2"
bitflags = "2.4"
lazy_static = { version = "1.4", optional = true }
log = "0.4"

# Optional dependencies for different features
ash = { version = "0.37", optional = true }  # For comparison with standard Vulkan
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
env_logger = "0.10"

[features]
default = ["validation"]
validation = []
vendored = []  # Use vendored loader
compare-ash = ["ash"]  # Enable comparison benchmarks with ash
implementation = ["lazy_static"]  # Enable the Rust implementation

[lib]
name = "kronos"
crate-type = ["cdylib", "rlib"]

[[example]]
name = "compute_simple"
path = "examples/compute_simple.rs"

[[bench]]
name = "api_overhead"
harness = false